2008-04-18 Sarka Todorova <sarka.todorova@cern.ch>
	* fix MSTB (Rpc shared bounds)
	* tagged as MuonTrackingGeometry-00-03-01

2008-04-16 Andreas.Salzburger@cern.ch < Andreas.Salzburger@cern.ch >
	* change of the way how SharedObject is handled
	* tagged as MuonTrackingGeometry-00-03-00

2008-04-04 Sarka Todorova <sarka.todorova@cern.ch>
	* merge with 'shared object' branch(-00-02-03-02) + updates
	* tagged as MuonTrackingGeometry-00-02-05

2008-04-03 Sarka Todorova <sarka.todorova@cern.ch>
	* protection against envelope/components input size mismatch in MSTB
	* tagged as MuonTrackingGeometry-00-02-04

2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
	* identical HepTransform replaced with 0 pointer in MIMB
	* tagged as MuonTrackingGeometry-00-02-03

2008-03-11 Sarka Todorova <sarka.todorova@cern.ch>
	* fix largest contribution to excessive memory consumption
	  ( standalone tag )
	* tagged as MuonTrackingGeometry-00-02-02

2008-02-21 Sarka Todorova <sarka.todorova@cern.ch>
	* switch to simpler default configuration (active material only, 2D partition)
	* tagged as MuonTrackingGeometry-00-02-01

2008-02-16 Andreas Salzburger < Andreas.Salzburger - at - cern.ch >
        * add signature
	* tagged as MuonTrackingGeometry-00-02-00

2008-02-15 Sarka Todorova <sarka.todorova@cern.ch>
	* define "MuonSpectrometerEntrance" volume in combined tracking geometry
	* tagged as MuonTrackingGeometry-00-01-10

2008-02-08 Sarka Todorova <sarka.todorova@cern.ch>
	* auppress printout of geometry volume tree
	* tagged as MuonTrackingGeometry-00-01-09

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* fix the identification of CSC stations
	* tagged as MuonTrackingGeometry-00-01-08

2008-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* modify coding of secondary coordinate for stations with cutouts (BOG)
	* tagged as MuonTrackingGeometry-00-01-07

2008-01-29 Sarka Todorova <sarka.todorova@cern.ch>
	* don't retrieve TrackingVolumesSvc unless needed (suppress error messages)