@@ -70,13 +70,16 @@ namespace Muon {
       /** Private method to check volume properties */
       void checkVolume(const Trk::TrackingVolume*) const;
       /** Private method to find detached volumes */
-      std::vector<const Trk::DetachedTrackingVolume*>* getDetachedObjects(const Trk::Volume*) const;
+      std::vector<const Trk::DetachedTrackingVolume*>* getDetachedObjects(const Trk::Volume*,Trk::MaterialProperties& mat) const;
       /** Private method to retrieve z/phi/h partition */
       void getZParts() const;
       void getPhiParts() const;
       void getHParts() const;
       double calculateVolume(const Trk::Volume*) const;
-           
+      void getDilutingFactors() const;
+      double getDilFactor(std::string) const;
+      void updateMatProps(Trk::MaterialProperties& mat, const Trk::TrackingVolume* trVol, double fact) const;
+     
       ToolHandle<Trk::IMagneticFieldTool>                  m_magFieldTool;                  //!< Tracking Interface to Magnetic Field
 
       ToolHandle<Trk::IDetachedTrackingVolumeBuilder>      m_stationBuilder;                //!< A Tool for station type creation
@@ -117,8 +120,8 @@ namespace Muon {
       int                                 m_innerEndcapEtaPartition;
       int                                 m_outerEndcapEtaPartition;
       int                                 m_phiPartition;
-      bool                                m_adjustStatic;
-      bool                                m_static3d;
+      mutable bool                        m_adjustStatic;
+      mutable bool                        m_static3d;
       bool                                m_blendInertMaterial; 
       mutable double                      m_alignTolerance;
 
@@ -131,6 +134,7 @@ namespace Muon {
       mutable std::vector<double>                                 m_adjustedPhi;
       mutable std::vector<int>                                    m_adjustedPhiType;
       mutable std::vector<std::vector<std::vector<std::vector<std::pair<int,double> > > > > m_hPartitions;
+      mutable std::vector<std::pair<std::string,double > >   m_dilFact;
       mutable std::vector< Trk::BinnedArray<Trk::TrackingVolume>* > m_garbage;
  };
 
